Fix rating display logic and styling
`<td>` with display flex was messed up always.

--- a/static_src/css/includes/stars.css
+++ b/static_src/css/includes/stars.css
@@ -1,4 +1,4 @@
-td.rating {
+.rating {
   display: flex;
 }
 
